swim_form/src/tests/unimplemented/unimplemented_primitive.stderr
error[E0277]: the trait bound `u32: swim_form::Form` is not satisfied
  --> $DIR/unimplemented_primitive.rs:18:1
   |
18 | #[form(Value)]
   | ^^^^^^^^^^^^^^ the trait `swim_form::Form` is not implemented for `u32`
   |
   = help: see issue #48214
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
